# Test

Hopping_0727_Chuhan motor torque 2/: README.md  Simulation_chuhan610.asv  Simulation_chuhan610.m  flight_phase_ODE.asv  flight_phase_ODE.m  inverse_jacobian.m  inverse_kinematics.m  stance_phase_ODE.asv  stance_phase_ODE.m  termination_liftoff.m  termination_touchdown.m  tricopter_dynamics.m  tricopter_mixer.m  tricopter_pid_controller.asv  tricopter_pid_controller.m
hopper_driver-master/: CMakeLists.txt  Readme.md  main.cpp  send.cpp  test_motor.cpp
hopper_driver-master/Lpms_IMU/: CMakeLists.txt  ImuWrapperExample.cpp
hopper_driver-master/Lpms_IMU/include/: ImuWrapper.h  LpLog.h  LpMatrix.h  LpUtil.h  LpmsIG1.h  LpmsIG1I.h  LpmsIG1Registers.h  MicroMeasure.h  SensorData.h  SensorDataI.h  SerialPort.h
hopper_driver-master/Lpms_IMU/src/: ImuWrapper.cpp  LpMatrix.c  LpUtil.cpp  LpmsIG1.cpp  MicroMeasure.cpp  SerialPortLinux.cpp
hopper_driver-master/hopper_lcm_types/: gamepad_lcmt.lcm  hopper_cmd_lcmt.lcm  hopper_data_lcmt.lcm  hopper_imu.lcm
hopper_driver-master/hopper_lcm_types/scripts/: config_network_lcm.sh  make_types.sh
hopper_driver-master/include/common/: color_control.hpp
hopper_driver-master/include/hardware/: ak60_controller.h  hopper_hardware.hpp  linmot_util.h  utility.h
hopper_driver-master/src/hardware/: ak60_controller.cpp  hopper_hardware.cpp  linmot_util.cpp  utility.cpp
hopper_driver-master/xbox_driver/: CMakeLists.txt  xbox_controller_example.cpp
hopper_driver-master/xbox_driver/include/: xbox_controller.hpp
hopper_driver-master/xbox_driver/src/: xbox_controller.cpp
